[package]
name = "rustytk"
version = "0.1.0"
authors = ["Andrei Nagacevschi <andrein_bio@yahoo.com>"]
edition = "2018"

[lib]
name = "rustytk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
vulkano = "0.19"
vulkano-win = "0.19"
vulkano-shaders = "0.19"
