[package]
name = "rustytk"
version = "0.1.0"
authors = ["Andrei Nagacevschi <andrein_bio@yahoo.com>"]
edition = "2021"

[lib]
name = "rustytk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
wgpu = { version = "0.11", features = ["spirv"] }
futures = "0.3"
shaderc = "0.7"
bytemuck = "1.4"
